#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-23
2017-11-07 Mikhail S. Dubrovin
- resolving conflict with Dan

Tag: V01-00-22
2017-11-07 Mikhail S. Dubrovin
- Improve run proccessing control
  - app/proc_control - add parameter ofprefix to redirect work files
  - src/DCUtils, GlobalUtils - do not print msg about existing directory
  - src/RunProcUtils, SubprocUtils - cosmetic update for docstring

2017-11-06 Daniel Damiani
- Support for ControlsCamera type added
	modified:   include/CalibParsStore.h
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py

Tag: V01-00-21
2017-11-06 Mikhail S. Dubrovin
- RunProcUtils - update docstring
- SubprocUtils - get rid of RunProcUtils utils and update tests

2017-11-03 Mikhail S. Dubrovin
- RunProcUtils.py - fix issue in saving records in the log file

Tag: V01-00-20
2017-11-02 Mikhail S. Dubrovin
- cosmetic update in apps, add #!@PYTHON@

Tag: V01-00-19
2017-10-31 Mikhail S. Dubrovin
- update data status processing

Tag: V01-00-18
2017-10-19 Mikhail S. Dubrovin
- GlobalUtils.evaluate_limits - is modified

2017-10-16 Mikhail S. Dubrovin
- Documentation improvement - in all modules add titles for better visibility.

Tag: V01-00-17
2017-10-13 Mikhail S. Dubrovin
- Jungfrau - add real segment geometry and all masks
	modified:   src/CalibParsBaseJungfrauV1.py
	modified:   src/GeometryAccess.py
	modified:   src/GeometryObject.py
	modified:   src/RunProcUtils.py
	modified:   src/SegGeometry.py
	modified:   src/SegGeometryEpix100V1.py
	new file:   src/SegGeometryJungfrauV1.py
	modified:   src/SegGeometryStore.py
	new file:   src/SubprocUtils.py

Tag: V01-00-16